--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -126,6 +126,12 @@
   <data name="CloseGameButton" xml:space="preserve">
     <value>Exit Game</value>
   </data>
+  <data name="Copy_RoomCode_Message" xml:space="preserve">
+    <value>The room code has been copied to cllipboard</value>
+  </data>
+  <data name="Copy_RoomCode_Title" xml:space="preserve">
+    <value>Room code copied</value>
+  </data>
   <data name="CreateGameButton" xml:space="preserve">
     <value>Create Game</value>
   </data>
@@ -137,6 +143,12 @@
   </data>
   <data name="EmailLabel" xml:space="preserve">
     <value>Email</value>
+  </data>
+  <data name="Exception_NoConnection_Message" xml:space="preserve">
+    <value>Connection to the server could not be established</value>
+  </data>
+  <data name="Exception_NoConnection_Title" xml:space="preserve">
+    <value>Error</value>
   </data>
   <data name="FontSizeSelector" xml:space="preserve">
     <value>Font Size</value>
@@ -150,6 +162,9 @@
   <data name="FriendRequestsButton" xml:space="preserve">
     <value>Friend Requests</value>
   </data>
+  <data name="GeneralWarning" xml:space="preserve">
+    <value>Warning</value>
+  </data>
   <data name="GoBackButton" xml:space="preserve">
     <value>Go Back</value>
   </data>
@@ -158,6 +173,12 @@
   </data>
   <data name="JoinGameButton" xml:space="preserve">
     <value>Join Game</value>
+  </data>
+  <data name="JoinRoom_CantJoin_Message" xml:space="preserve">
+    <value>Unable to join the room because it is full or the game has already started</value>
+  </data>
+  <data name="JoinRoom_NoCode_Message" xml:space="preserve">
+    <value>You need to enter the code</value>
   </data>
   <data name="LanguageSelector" xml:space="preserve">
     <value>Language</value>
